--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,3 +30,21 @@ a{
   color: inherit;
   text-decoration: none;
 }
+
+.post p, ul{
+  margin: 1.5rem 0;
+}
+
+.post ul{
+  padding-left: 1.5rem;
+
+}
+
+.post ul li{
+  margin: 0.5rem 0;
+
+}
+
+.fill-transparent{
+  -webkit-text-fill-color: transparent;
+}
